# jellyfin-collection

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.portainer.yml  docker-compose.yml  pyproject.toml
.backlog/: README.md
.backlog/imports/: .gitignore
.backlog/reports/2026-03-08-github-issues-review/: qa-backend.md  review-backend.md
.backlog/tasks/2026-03-08-github-issues-review/: kpis.md  plan.md  report.md  retrospective.md  spec.md  task.md  workflow-config.yaml
.backlog/tasks/2026-03-08-github-issues-review/exploration/: backend.md  config.md  github-issues.md  tests-quality.md
.backlog/tasks/2026-03-08-github-issues-review/qa/backend/: 01-20260308.md
.backlog/tasks/2026-03-08-github-issues-review/review/backend/: 01-20260308.md
.claude/agents/: README.md
.claude/cookbooks/: README.md
.claude/hooks/: statusline.py
.github/workflows/: docker-build.yml
docs/: ai-posters.md  api-reference.md  configuration.md  installation.md  kometa-migration.md
docs/examples/templates/: README.md  base_structure.example.j2  category_styles.example.yaml
src/jfc/: __init__.py  cli.py
src/jfc/clients/: __init__.py  discord.py  imdb.py  jellyfin.py  telegram.py  tmdb.py
src/jfc/core/: config.py
src/jfc/models/: collection.py  media.py
src/jfc/parsers/: kometa.py
src/jfc/services/: collection_builder.py  media_matcher.py  poster_generator.py  runner.py  startup.py  trakt_auth.py
src/jfc/templates/: base_structure.j2  category_styles.yaml  collection_themes.yaml  scene_description.j2  visual_signature.j2
tests/: test_complete_run.py  test_dynamic_signatures.py  test_poster_cartoons.py  test_poster_series.py  test_poster_with_items.py
tests/unit/: test_collection_builder.py  test_imdb_client.py  test_kometa_parser.py  test_tmdb_client.py
